# chinese-pattern-dataset

./: .gitignore  README.md  pyproject.toml
db/: patterns.db  schema.sql
db/seed/: taxonomy.json
docs/: migration_notes.md  preview.html
scripts/: ai_generate.py  ai_story.py  fetch_met.py  fetch_smithsonian.py  fetch_smithsonian_s3.py  fill_remaining.sh  ingest_curated.py  init_db.py  migrate_from_wenmai.py  preview_html.py  rename_assets.py  stats.py  tag_decorative.py  vectorize.py
src/pattern_dataset/: __init__.py  db.py  http_client.py  models.py
src/pattern_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_fetch_smithsonian.py  test_migration.py  test_schema.py
