[project]
name = "pattern-dataset"
version = "0.1.0"
description = "Chinese traditional pattern dataset for LoRA training and cultural research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-SA-4.0" }
dependencies = [
    "pydantic>=2.0",
    "Pillow>=10.0",
    "sqlite-utils>=2.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
